# Graphics-PROG2002-NTNU

./: .gitignore  CMakeLists.txt  README.md
assignment/: CMakeLists.txt  assignment.cpp  assignment.h  board.h  main.cpp  piece.cpp
assignment/shaders/: chessboard.glsh
framework/: CMakeLists.txt
framework/Camera/: CMakeLists.txt  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
framework/GLFWApplication/: GLFWApplication.cpp  GLFWApplication.h
framework/GeometricTools/: GeometricTools.h
framework/IndexBuffer/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h
framework/RenderCommands/: CMakeLists.txt  RenderCommands.h
framework/Shader/: CMakeLists.txt  Shader.cpp  Shader.h  ShadersDataTypes.h
framework/TextureManager/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
framework/VertexArray/: CMakeLists.txt  VertexArray.cpp  VertexArray.h
framework/VertexBuffer/: BufferLayout.h  CMakeLists.txt  VertexBuffer.cpp  VertexBuffer.h
labs/bendik/: CMakeLists.txt
labs/bendik/lab1/: CMakeLists.txt  main.cpp
labs/bendik/lab1-fix/: CMakeLists.txt  main.cpp
labs/bendik/lab2/: CMakeLists.txt  main.cpp
labs/bendik/lab2-fix/: CMakeLists.txt  fragmentShader.glsh  main.cpp  vertexShader.glsh
labs/bendik/lab3/: CMakeLists.txt  cbShaders.glsh  cubeShaders.glsh  main.cpp
labs/bendik/lab4/: CMakeLists.txt  cubeShaders.glsh  floorShaders.glsh  main.cpp
labs/bendik/lab5/: CMakeLists.txt  cubeShaders.glsh  floorShaders.glsh  main.cpp
labs/joachim/: CMakeLists.txt
labs/joachim/Lab4/: CMakeLists.txt  floorShaders.glsh  fragmentShader.glsh  main.cpp  vertexShader.glsh
labs/joachim/Lab5/: CMakeLists.txt  cube.cpp  fragmentShader.glsh  vertexShader.glsh
labs/joachim/exam23/: CMakeLists.txt  assignment.cpp  assignment.h  board.cpp  board.h  desLoc.cpp  desLoc.h  glHelpers.h  main.cpp  piece.cpp  piece.h
labs/joachim/issue13/: CMakeLists.txt  fragmentShader.glsh
labs/joachim/lab1/: CMakeLists.txt  main.cpp
labs/joachim/lab1/Lab1-task2&3/: CMakeLists.txt  main.cpp  squareShader.h  triangleShader.h
labs/joachim/lab2-fix/: CMakeLists.txt  (+2 more)
(+18 files in other folders)
